--- a/main.html
+++ b/main.html
@@ -4,11 +4,14 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>Code Optimization</title>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Code Optimization</h1>
 	<ol>
+		<li>We can optimize a solution using both time and space optimization. To optimize a program,</li>
 		<li>We can reduce the time taken to run the program and increase the space occupied</li>
 		<li>We can reduce the memory usage of the program and increase it’s total run time</li>
 		<li>We can reduce both time and space complexity by deploying relevant algorithms</li>
